# mzfmt

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  generate.sh  shell.nix  updatedocs.sh
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
docs/: CNAME  index.html  mzfmt.d.ts  mzfmt.js  mzfmt_bg.wasm  mzfmt_bg.wasm.d.ts  package.json  web.d.ts  web.js  web_bg.wasm  web_bg.wasm.d.ts
src/: lib.rs  main.rs
tests/: parser.rs
vscode/: README.md
vscode/vscode-rust-web/: README.md  generate.sh  package-lock.json  package.json
vscode/vscode-rust-web/.devcontainer/: devcontainer.json
vscode/vscode-rust-web/src/web/: extension.ts  test.sql
vscode/vscode-web-wasm-webpack-plugin/: package-lock.json
web/: Cargo.toml
web/src/: lib.rs
