[package]
name = "mzfmt"
version = "0.2.1"
edition = "2021"
description = "SQL pretty printer for the Materialize dialect"
repository = "https://github.com/mjibson/mzfmt"
license-file = "LICENSE.txt"

[dependencies]
clap = { version = "2" }
mz-sql-pretty = { git = "https://github.com/MaterializeInc/materialize.git", rev = "ce90d685a0925aaec7a1984ba61bafa620959cdc", default-features = false }
structopt = { version = "0.3", default-features = false }

[dev-dependencies]
datadriven = "0.6"
