[package]
name = "mzfmt"
version = "0.2.2"
edition = "2021"
description = "SQL pretty printer for the Materialize dialect"
repository = "https://github.com/mjibson/mzfmt"
license-file = "LICENSE.txt"

[dependencies]
clap = { version = "2" }
mz-sql-pretty = { git = "https://github.com/MaterializeInc/materialize.git", rev = "4ca7d57ea2e4713cca3df7e9e8f5779db73f53db", default-features = false }
structopt = { version = "0.3", default-features = false }

[dev-dependencies]
datadriven = "0.6"
