[package]
name = "web"
version = "0.0.0"
authors = ["Matt Jibson <matt.jibson@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mz-sql-pretty = { git = "https://github.com/MaterializeInc/materialize.git", rev = "4ca7d57ea2e4713cca3df7e9e8f5779db73f53db", default-features = false }
wasm-bindgen = "0.2.88"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
