[package]
name = "web"
version = "0.0.0"
authors = ["Maddy Blue <github@maddy.blue>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mz-sql-pretty = { git = "https://github.com/MaterializeInc/materialize.git", tag = "v0.110.0", default-features = false }
wasm-bindgen = "0.2.88"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
